--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </section>
     
         <section id="galeria" class="galería" >
-            <h2>Galería</h2>
+            <h2 style="color: #007BFF;">Galería</h2>
             <div class="gallery">
                 <img src="https://images.unsplash.com/photo-1562004760-aceed7bb0fe3?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Corte de cabello 1">
                 <img src="https://images.unsplash.com/photo-1605980766335-d3a41c7332a1?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Corte de cabello 2">
@@ -115,9 +115,11 @@
     <h2>Ubicación</h2>
      <iframe
     src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d204.48528301198186!2d-56.153648300988785!3d-34.91235831308555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2suy!4v1747236731166!5m2!1ses-419!2suy"
-    allowfullscreen=""
-    loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade"
+    width="100%" 
+    height="300" 
+    style="border:0;" 
+    allowfullscreen="" 
+    loading="lazy">
       ></iframe>
   </div>
 </section>
